--- a/HCloud/HCloud.csproj
+++ b/HCloud/HCloud.csproj
@@ -58,6 +58,9 @@
     <Reference Include="MySql.Data, Version=6.10.6.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
       <HintPath>..\packages\MySql.Data.6.10.6\lib\net452\MySql.Data.dll</HintPath>
     </Reference>
+    <Reference Include="Recaptcha">
+      <HintPath>..\packages\Recaptcha.dll</HintPath>
+    </Reference>
     <Reference Include="System.ComponentModel" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System" />
@@ -196,6 +199,7 @@
     <Content Include="Resources\Medication.png" />
     <Content Include="Resources\medicationAll.png" />
     <Content Include="Resources\medicationNew.png" />
+    <Content Include="Resources\Overlay.png" />
     <Content Include="Resources\pdf.png" />
     <Content Include="Resources\png.png" />
     <Content Include="Resources\rapport.png" />
