--- a/HCloud/Web.config
+++ b/HCloud/Web.config
@@ -10,6 +10,7 @@
     </sectionGroup>
   </configSections>
   <system.web>
+    <sessionState mode="InProc" timeout="5"></sessionState>
     <customErrors mode="On" defaultRedirect="ErrorPage.aspx?handler=customErrors%20section%20-%20Web.config">
       <error statusCode="404" redirect="ErrorPage.aspx?msg=404&amp;handler=customErrors%20section%20-%20Web.config"/>
     </customErrors>
