--- a/HCloud/Web.config
+++ b/HCloud/Web.config
@@ -13,6 +13,7 @@
     <sessionState mode="InProc" timeout="5"></sessionState>
     <customErrors mode="On" defaultRedirect="ErrorPage.aspx?handler=customErrors%20section%20-%20Web.config">
       <error statusCode="404" redirect="ErrorPage.aspx?msg=404&amp;handler=customErrors%20section%20-%20Web.config"/>
+     <error statusCode="403" redirect="ErrorPage.aspx?msg=404&amp;handler=customErrors%20section%20-%20Web.config"/>
     </customErrors>
     <compilation debug="true" targetFramework="4.6.1">
       <assemblies>
